added some vendor stuff and first responsive fixed layout. click events on warps to show details

--- a/www/index.html
+++ b/www/index.html
@@ -30,11 +30,17 @@
   <title>ubirch - re:publica 2015</title>
 </head>
 <body>
-<!--<div class="background"></div>-->
-<div id="app"></div>
-<!--<script type="text/javascript" src="cordova.js"></script>-->
-<script type="text/javascript" src="js/d3.v3.min.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
-<script type="text/javascript" src="js/ubirch.js"></script>
+    <div class="app">
+        <div class="map"></div>
+        <div class="detail">
+            <div class="content"></div>
+        </div>
+    </div>
+    <!--<script type="text/javascript" src="cordova.js"></script>-->
+    <script type="text/javascript" src="js/d3.v3.min.js"></script>
+    <script type="text/javascript" src="js/jquery.min.js"></script>
+    <script type="text/javascript" src="js/fastclick.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/ubirch.js"></script>
 </body>
 </html>
