--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
   <meta name="viewport"
         content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi"/>
   <link rel="stylesheet" type="text/css" href="css/index.css"/>
+  <link rel="stylesheet" type="text/css" href="css/flags.css"/>
   <link rel="stylesheet" type="text/css" href="css/example.css"/>
   <title>ubirch - re:publica 2015</title>
 </head>
