--- a/www/index.html
+++ b/www/index.html
@@ -27,10 +27,29 @@
         content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi"/>
   <link rel="stylesheet" type="text/css" href="css/index.css"/>
   <link rel="stylesheet" type="text/css" href="css/flags.css"/>
-  <link rel="stylesheet" type="text/css" href="css/example.css"/>
   <title>ubirch - re:publica 2015</title>
 </head>
 <body>
+    <div class="credits">
+        <i class="leaf"></i>
+        <div class="content">
+            <div class="cell">
+                <h2>Basic Imprint:</h2>
+                ubirch GmbH (Stephan Noller)<br/>
+                <a href="http://ubirch.com/imprint.html" target="_blank">http://ubirch.com/imprint.html</a><br/>
+                <br/>
+                <h2>Concept & Programming</h2>
+                Matthias L. Jugel (<a href="http://twitter.com/thinkberg" target="_blank">http://twitter.com/thinkberg</a>)<br/>
+                Willy Woitas (<a href="https://www.facebook.com/willyfetzig">https://www.facebook.com/willyfetzig</a>)<br/>
+                <br/>
+                <h2>Design & Maps</h2>
+                fuenfwerken Design AG (<a href="http://www.fuenfwerken.com" target="_blank">http://www.fuenfwerken.com</a>)<br/>
+                <br/>
+                <h2>Deployment</h2>
+                indarium GmbH (<a href="http://www.indarium.de" target="_blank">http://www.indarium.de</a>)<br/>
+            </div>
+        </div>
+    </div>
     <div class="app">
         <div class="map"></div>
         <div class="detail">
