--- a/www/index.html
+++ b/www/index.html
@@ -60,7 +60,7 @@
             <div class="content"></div>
         </div>
     </div>
-    <!--<script type="text/javascript" src="cordova.js"></script>-->
+    <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/d3.v3.min.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/fastclick.js"></script>
