fixxed detail bg

--- a/www/index.html
+++ b/www/index.html
@@ -57,6 +57,7 @@
     <div class="app">
         <div class="map"></div>
         <div class="detail">
+            <div class="bg"></div>
             <div class="content"></div>
         </div>
     </div>
