--- a/www/index.html
+++ b/www/index.html
@@ -39,17 +39,17 @@
                 <div class="bg">
                     <h2>Basic Imprint:</h2>
                     ubirch GmbH (Stephan Noller)<br/>
-                    <a href="http://ubirch.com/imprint.html" target="_blank">http://ubirch.com/imprint.html</a><br/>
+                    <a href="http://ubirch.com/imprint.html" target="_blank">ubirch.com/imprint.html</a><br/>
                     <br/>
                     <h2>Concept & Programming</h2>
-                    Matthias L. Jugel (<a href="http://twitter.com/thinkberg" target="_blank">http://twitter.com/thinkberg</a>)<br/>
-                    Willy Woitas (<a href="https://www.facebook.com/willyfetzig">https://www.facebook.com/willyfetzig</a>)<br/>
+                    Matthias L. Jugel (<a href="http://twitter.com/thinkberg" target="_blank">twitter.com/thinkberg</a>)<br/>
+                    Willy Woitas (<a href="https://www.facebook.com/willyfetzig">facebook.com/willyfetzig</a>)<br/>
                     <br/>
                     <h2>Design & Maps</h2>
-                    fuenfwerken Design AG (<a href="http://www.fuenfwerken.com" target="_blank">http://www.fuenfwerken.com</a>)<br/>
+                    fuenfwerken Design AG (<a href="http://www.fuenfwerken.com" target="_blank">fuenfwerken.com</a>)<br/>
                     <br/>
                     <h2>Deployment</h2>
-                    indarium GmbH (<a href="http://www.indarium.de" target="_blank">http://www.indarium.de</a>)<br/>
+                    indarium GmbH (<a href="http://www.indarium.de" target="_blank">indarium.de</a>)<br/>
                 </div>
             </div>
         </div>
