added Lato font (as per website), updated credits, added HU

--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,7 @@
         content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi"/>
   <link rel="stylesheet" type="text/css" href="css/index.css"/>
   <link rel="stylesheet" type="text/css" href="css/flags.css"/>
+  <link rel='stylesheet' href='css/lato.css' type='text/css'/>
   <title>ubirch - re:publica 2015</title>
 </head>
 <body>
@@ -37,19 +38,33 @@
         <div class="content">
             <div class="cell">
                 <div class="bg">
-                    <h2>Basic Imprint:</h2>
-                    ubirch GmbH (Stephan Noller)<br/>
-                    <a href="http://ubirch.com/imprint.html" target="_blank">ubirch.com/imprint.html</a><br/>
+                    <a href="https://re-publica.de/" target="_blank">
+                        <img src="img/ubirch_logo_black.svg" alt="re:publica 2015" width="40%">
+                    </a>
+                    <h1>Finding Europe with Lights</h1>
+                    <p>We want to connect Europe with RGB-Values</p>
+                    &copy; 2015 <a href="http://ubirch.com/" target="_blank">ubirch GmbH</a>
+                    <br/>
+                    <br/>
+                    <hr/>
                     <br/>
                     <h2>Concept & Programming</h2>
-                    Matthias L. Jugel (<a href="http://twitter.com/thinkberg" target="_blank">twitter.com/thinkberg</a>)<br/>
-                    Willy Woitas (<a href="https://www.facebook.com/willyfetzig">facebook.com/willyfetzig</a>)<br/>
+                    Matthias L. Jugel (<a href="http://twitter.com/thinkberg" target="_blank">@thinkberg</a>)<br/>
+                    Willy Woitas (<a href="https://www.facebook.com/willyfetzig">facebook.com/willyfetzig</a>)
                     <br/>
-                    <h2>Design & Maps</h2>
-                    fuenfwerken Design AG (<a href="http://www.fuenfwerken.com" target="_blank">fuenfwerken.com</a>)<br/>
+                    <br/>
+                    <h2>Map Design</h2>
+                    <a href="http://www.fuenfwerken.com" target="_blank">fuenfwerken Design AG</a>
+                    <br/>
                     <br/>
                     <h2>Deployment</h2>
-                    indarium GmbH (<a href="http://www.indarium.de" target="_blank">indarium.de</a>)<br/>
+                    <a href="http://www.indarium.de" target="_blank">indarium GmbH</a>
+                    <br/>
+                    <br/>
+                    <p class="grey">in cooperation with re:publica</p>
+                    <a href="https://re-publica.de/" target="_blank">
+                    <img src="img/logo_republica15.png" alt="re:publica 2015" width="40%">
+                    </a>
                 </div>
             </div>
         </div>
