fixxed color blobs and detail view

--- a/www/index.html
+++ b/www/index.html
@@ -73,7 +73,9 @@
         <div class="map"></div>
         <div class="detail">
             <div class="bg"></div>
-            <div class="content"></div>
+            <div class="wrap">
+                <div class="content"></div>
+            </div>
         </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
