--- a/www/index.html
+++ b/www/index.html
@@ -31,58 +31,75 @@
   <title>ubirch - re:publica 2015</title>
 </head>
 <body>
-    <div class="credits">
-        <figure>
-            <i class="leaf"></i>
-        </figure>
-        <div class="content">
-            <div class="cell">
-                <div class="bg">
-                    <a href="https://re-publica.de/" target="_blank">
-                        <img src="img/ubirch_logo_black.svg" alt="re:publica 2015" width="40%">
-                    </a>
-                    <h1>Finding Europe with Lights</h1>
-                    <p>We want to connect Europe with RGB-Values</p>
-                    &copy; 2015 <a href="http://ubirch.com/" target="_blank">ubirch GmbH</a>
-                    <br/>
-                    <br/>
-                    <hr/>
-                    <br/>
-                    <h2>Concept & Programming</h2>
-                    Matthias L. Jugel (<a href="http://twitter.com/thinkberg" target="_blank">@thinkberg</a>)<br/>
-                    Willy Woitas (<a href="https://www.facebook.com/willyfetzig">facebook.com/willyfetzig</a>)
-                    <br/>
-                    <br/>
-                    <h2>Map Design</h2>
-                    <a href="http://www.fuenfwerken.com" target="_blank">fuenfwerken Design AG</a>
-                    <br/>
-                    <br/>
-                    <h2>Deployment</h2>
-                    <a href="http://www.indarium.de" target="_blank">indarium GmbH</a>
-                    <br/>
-                    <br/>
-                    <p class="grey">in cooperation with re:publica</p>
-                    <a href="https://re-publica.de/" target="_blank">
-                    <img src="img/logo_republica15.png" alt="re:publica 2015" width="40%">
-                    </a>
-                </div>
-            </div>
-        </div>
+<div class="credits">
+  <figure>
+    <i class="leaf"></i>
+  </figure>
+  <div class="content">
+    <div class="cell">
+      <div class="bg">
+        <a href="https://re-publica.de/" target="_blank">
+          <img src="img/ubirch_logo_black.svg" alt="re:publica 2015" width="40%">
+        </a>
+
+        <h1>Finding Europe with Lights</h1>
+
+        <p>We want to connect Europe with RGB-Values</p>
+        &copy; 2015 <a href="http://ubirch.com/" target="_blank">ubirch GmbH</a>
+        <br/>
+        <br/>
+        <hr/>
+        <br/>
+
+        <h2>Concept & Programming</h2>
+        Matthias L. Jugel (<a href="http://twitter.com/thinkberg" target="_blank">@thinkberg</a>)<br/>
+        Willy Woitas (<a href="https://www.facebook.com/willyfetzig">facebook.com/willyfetzig</a>)
+        <br/>
+        <br/>
+
+        <h2>Map Design</h2>
+        <a href="http://www.fuenfwerken.com" target="_blank">fuenfwerken Design AG</a>
+        <br/>
+        <br/>
+
+        <h2>Deployment</h2>
+        <a href="http://www.indarium.de" target="_blank">indarium GmbH</a>
+        <br/>
+        <br/>
+
+        <p class="grey">in cooperation with re:publica</p>
+        <a href="https://re-publica.de/" target="_blank">
+          <img src="img/logo_republica15.png" alt="re:publica 2015" width="40%">
+        </a>
+      </div>
     </div>
-    <div class="app">
-        <div class="map"></div>
-        <div class="detail">
-            <div class="bg"></div>
-            <div class="wrap">
-                <div class="content"></div>
-            </div>
+  </div>
+</div>
+<div class="app">
+  <div class="map"></div>
+  <div class="detail">
+    <div class="bg"></div>
+    <div class="wrap">
+      <div class="content visible">
+        <div class="start">
+          <h1>Finding Europe with Lights</h1>
+
+          <p>
+            When re:publica opens it’s doors on May 5th, you will find 28 hand-made lamps that are
+            connected to sensors throughout Europe. These lamps will show the colors of Europe. If the sun is shining in
+            Portugal, the lamp will shine bright, if France is seeing the sun rising later than Bulgaria the lamp will
+            show that difference to early visitors of the trade-faire.
+          </p>
         </div>
+      </div>
     </div>
-    <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/d3.v3.min.js"></script>
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/fastclick.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
-    <script type="text/javascript" src="js/ubirch.js"></script>
+  </div>
+</div>
+<script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="js/d3.v3.min.js"></script>
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/fastclick.js"></script>
+<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="js/ubirch.js"></script>
 </body>
 </html>
