added comment to click on locations

--- a/www/index.html
+++ b/www/index.html
@@ -89,6 +89,9 @@
             connected to sensors throughout Europe. These lamps will show the colors of Europe. If the sun is shining in
             Portugal, the lamp will shine bright, if France is seeing the sun rising later than Bulgaria the lamp will
             show that difference to early visitors of the trade-faire.
+            </p>
+          <p>
+            <b>Click on the locations for more info.</b>
           </p>
         </div>
       </div>
