added zoomed-in navigation

--- a/www/index.html
+++ b/www/index.html
@@ -74,7 +74,14 @@
   </div>
 </div>
 <div class="app">
-  <div class="map"></div>
+  <div class="map">
+      <div class="arrows">
+          <div class="arrow north" data-go-to="north"></div>
+          <div class="arrow east" data-go-to="east"></div>
+          <div class="arrow south" data-go-to="south"></div>
+          <div class="arrow west" data-go-to="west"></div>
+      </div>
+  </div>
   <div class="detail">
     <div class="bg"></div>
     <div class="wrap">
