--- a/www/index.html
+++ b/www/index.html
@@ -56,7 +56,7 @@
         <br/>
 
         <h2>Map Design</h2>
-        <a href="http://www.fuenfwerken.com" target="_blank">fuenfwerken Design AG</a>
+        <a href="http://www.fuenfwerken.com" target="_blank">Fuenfwerken Design AG</a>
         <br/>
         <br/>
 
